@@ -4,7 +4,9 @@ Changelog
 2.3.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Perform soft commits and wait for new searcher by default to allow near real
+  time (NRT) searching.
+  [buchi]
 
 
 2.3.2 (2019-04-29)
